--- a/package.json
+++ b/package.json
@@ -2,7 +2,23 @@
   "name": "comp_229_a01",
   "version": "1.0.0",
   "description": "COMP_229_A01 project.",
-  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DinuGh/comp_229_a01.git"
+  },
+  "keywords": [
+    "COMP229",
+    "MEAN",
+    "Web",
+    "App",
+    "JavaScript"
+  ],
+  "author": "Dinu Gherciu",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/DinuGh/comp_229_a01/issues"
+  },
+  "homepage": "https://github.com/DinuGh/comp_229_a01#readme",
   "scripts": {
     "start": "node ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,15 +30,5 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DinuGh/comp_229_a01.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/DinuGh/comp_229_a01/issues"
-  },
-  "homepage": "https://github.com/DinuGh/comp_229_a01#readme"
+  }
 }
