--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^6.6.5",
     "morgan": "~1.9.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./bin/www"
+    "start": "node ./server.js"
   },
   "repository": {
     "type": "git",
